--- a/woff1.html
+++ b/woff1.html
@@ -9,8 +9,8 @@
         var WOFF_ID = "DXrAQ9Vo7n1U3ss5g0l9jg";
     </script>
     <script charset="utf-8" src="https://static.worksmobile.net/static/wm/woff/edge/3.6/sdk.js"></script>
-    <script src="https://iwaohig.github.io/woff-suzuvc/woffFormHandler.js"></script>
-    <link rel="stylesheet" href="https://iwaohig.github.io/woff-suzuvc/style.css">
+    <script src="woffFormHandler.js"></script> <!-- 修正: スクリプトのパスを適切に設定してください -->
+    <link rel="stylesheet" href="style.css"> <!-- 修正: CSSのパスを適切に設定してください -->
 </head>
 <body>
 <h1>Volunteer Report Form</h1>
@@ -25,6 +25,8 @@
 
     <!-- ユーザーID（hidden） -->
     <input type="hidden" id="userIdInput" name="userId">
+
+    <!-- アクセストークン（hidden）はJavaScriptによって動的に追加されます -->
 
     <!-- 実ボランティア数 -->
     <label for="actualVolunteers">実ボランティア数:</label>
@@ -46,8 +48,6 @@
     <label for="continuationCount">継続件数:</label>
     <input type="number" id="continuationCount" name="continuationCount" required>
 
-    <!-- アクセストークン（送信時にJavaScriptで追加される） -->
-
     <button type="button" onclick="submitForm()">送信</button>
 </form>
 
@@ -56,7 +56,7 @@
     function getTodayFormatted() {
         const today = new Date();
         const year = today.getFullYear();
-        const month = (today.getMonth() + 1).toString().padStart(2, '0'); // 月は0から始まるため、+1しています
+        const month = (today.getMonth() + 1).toString().padStart(2, '0');
         const day = today.getDate().toString().padStart(2, '0');
         return `${year}-${month}-${day}`;
     }
