--- a/woff1.html
+++ b/woff1.html
@@ -47,6 +47,10 @@
     <!-- 継続件数 -->
     <label for="continuationCount">継続件数:</label>
     <input type="number" id="continuationCount" name="continuationCount" required>
+    
+    <label for="otherDetails">その他:</label>
+    <textarea id="otherDetails" name="otherDetails" rows="4" placeholder="その他の詳細を記入してください"></textarea>
+
 
     <button type="button" onclick="submitForm()">送信</button>
 </form>
