--- a/woff1.html
+++ b/woff1.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css"> <!-- 修正: CSSのパスを適切に設定してください -->
 </head>
 <body>
-<h1>Volunteer Report Form</h1>
+<h1>対応報告</h1>
 <form id="myForm">
     <!-- 日: 既定で今日の日付 -->
     <label for="dateInput">日:</label>
